--- a/style.css
+++ b/style.css
@@ -1,35 +1,69 @@
-mark {
+   mark {
     text-shadow: 0 -1px rgb(109, 159, 235); 
     color: black; 
     background-color: white;
     }
-    img{
 
-    }
-    h1, h2 {
+    h2 {
         margin-left: 5%;
     }
+
     .textcols {
         white-space: nowrap;
     }
+
     .col2 {
         display: inline-block;
         white-space: normal;	
-        width: 40%;
+        width: 30%;
         vertical-align: top;
     }
+
     p.col2{
         margin-left: 2%;
+        margin-top: 3%;
         text-indent: 20px;
     }
+
     ul.col2 {
         margin-left: 20%;
+        margin-top: 3%;
     }
+
     footer {
-        text-align: center;
+        padding-top: 20px;
     }
+
+    .footer {
+        text-align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;    }
+    
     img {
         width: 70px;
         height: 50px;
-        align-self: right;
+    }
+
+    #nomarker {
+        list-style-type: none;
+        font-weight: bold;
+    }
+
+    #photo {
+        width: 150px;
+        height: 200px;
+        padding-left: 3%;
+    }
+
+    h1 {
+            margin-left: 35%; 
+    }
+
+    main {
+        margin-top: 20px;
+    }
+
+    .centering {
+        margin: auto;
     }
