--- a/style.css
+++ b/style.css
@@ -1,70 +1,75 @@
-   mark {
-    text-shadow: 0 -1px rgb(109, 159, 235); 
-    color: black; 
-    background-color: white;
-    }
+mark {
+  text-shadow: 0 -1px rgb(109, 159, 235);
+  color: black;
+  background-color: white;
+}
 
-    h2 {
-        margin-left: 5%;
-    }
+h2 {
+  margin-left: 5%;
+}
 
-    .textcols {
-        white-space: nowrap;
-    }
+.textcols {
+  white-space: nowrap;
+}
 
-    .col2 {
-        display: inline-block;
-        white-space: normal;	
-        width: 30%;
-        vertical-align: top;
-    }
+.col2 {
+  display: inline-block;
+  white-space: normal;
+  width: 30%;
+  vertical-align: top;
+}
 
-    p.col2{
-        margin-left: 2%;
-        margin-top: 3%;
-        text-indent: 20px;
-    }
+p.col2 {
+  margin-left: 2%;
+  margin-top: 3%;
+  text-indent: 20px;
+}
 
-    ul.col2 {
-        margin-left: 20%;
-        margin-top: 3%;
-    }
+ul.col2 {
+  margin-left: 20%;
+  margin-top: 3%;
+}
 
-    footer {
-        padding-top: 20px;
-    }
+footer {
+  padding-top: 20px;
+}
 
-    .footer {
-        text-align: center;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;    }
-    
-    img {
-        width: 70px;
-        height: 50px;
-    }
+.footer {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-    #nomarker {
-        list-style-type: none;
-        font-weight: bold;
-    }
+img {
+  width: 70px;
+  height: 50px;
+}
 
-    #photo {
-        width: 150px;
-        height: 200px;
-        padding-left: 3%;
-    }
+#nomarker {
+  list-style-type: none;
+  font-weight: bold;
+}
 
-    h1 {
-            margin-left: 35%; 
-    }
+#photo {
+  width: 150px;
+  height: 200px;
+  padding-left: 3%;
+}
 
-    main {
-        margin-top: 20px;
-    }
+h1 {
+  margin-left: 35%;
+}
 
-    .centering {
-        margin: auto;
-       font-size: 18px;
-    }
+main {
+  margin-top: 20px;
+}
+
+.centering {
+  margin: auto;
+  font-size: 18px;
+}
+
+.info {
+  text-align: center;
+}
